# poly_demo

./: pyproject.toml  workspace.toml
bases/my_demo/my_example_base/: core.py
bases/my_demo/my_example_base1/: __init__.py
development/: demo_my_example_base.py
projects/my_example_project/: pyproject.toml
test/bases/my_demo/my_example_base/: test_core.py
test/bases/my_demo/my_example_base1/: test_core.py
test/components/my_demo/my_example_component/: test_core.py
