[tool.poetry]
name = "my_example_project"
version = "0.1.0"
description = ""
authors = ['Yoel Benitez Fonseca <ybenitezf@gmail.com>']
license = ""

packages = [
    {include = "my_demo/my_example_base",from = "../../bases"},
    {include = "my_demo/my_example_base1",from = "../../bases"},
    {include = "my_demo/my_example_component",from = "../../components"},
]

[tool.poetry.scripts]
my_script = 'my_demo.my_example_base.core:main'

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
